--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
   },
   "homepage": "https://github.com/chervyakov-vladislav/burger_2#readme",
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "browser-sync": "^2.27.9",
-    "cross-env": "^7.0.3",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-csso": "^4.0.1",
-    "gulp-if": "^3.0.0",
-    "gulp-load-plugins": "^2.0.7",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-sass-glob": "^1.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "node-sass": "^7.0.1",
+    "@babel/core": "7.17.10",
+    "@babel/preset-env": "7.17.10",
+    "browser-sync": "2.27.9",
+    "cross-env": "7.0.3",
+    "del": "6.0.0",
+    "gulp": "4.0.2",
+    "gulp-autoprefixer": "8.0.0",
+    "gulp-babel": "8.0.0",
+    "gulp-concat": "2.6.1",
+    "gulp-csso": "4.0.1",
+    "gulp-if": "3.0.0",
+    "gulp-load-plugins": "2.0.7",
+    "gulp-rename": "2.0.0",
+    "gulp-sass": "5.1.0",
+    "gulp-sass-glob": "1.1.0",
+    "gulp-sourcemaps": "3.0.0",
+    "gulp-uglify": "3.0.2",
+    "node-sass": "7.0.1",
     "sass": "^1.51.0"
   }
 }
